add hive data management
