# src/routes/hive.routes.ts
@@ -1,6 +1,6 @@
 import {Router} from 'express';
 import {deleteHive, getAllHives, getHive, patchHive, postHive} from "../controllers/hive.controller.js";
-import {postData} from "../controllers/hiveData.controller.js";
+import {postData, deleteData, deleteAllData} from "../controllers/hiveData.controller.js";
 
 const routes = Router();
 
@@ -13,5 +13,7 @@ routes.delete('/:id', deleteHive);
 
 // DATA:
 routes.post('/data/', postData);
+routes.delete('/data/:id', deleteData);
+routes.delete('/data/all/:hiveId', deleteAllData);
 
 export default routes;
